// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`last_line.js - {"bracketSameLine":false} format 1`] = `
====================================options=====================================
bracketSameLine: false
parsers: ["flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<SomeHighlyConfiguredComponent
  onEnter={this.onEnter}
  onLeave={this.onLeave}
  onChange={this.onChange}
  initialValue={this.state.initialValue}
  ignoreStuff={true}
>
  <div>and the children go here</div>
  <div>and here too</div>
</SomeHighlyConfiguredComponent>

=====================================output=====================================
<SomeHighlyConfiguredComponent
  onEnter={this.onEnter}
  onLeave={this.onLeave}
  onChange={this.onChange}
  initialValue={this.state.initialValue}
  ignoreStuff={true}
>
  <div>and the children go here</div>
  <div>and here too</div>
</SomeHighlyConfiguredComponent>;

================================================================================
`;

exports[`last_line.js - {"bracketSameLine":true} format 1`] = `
====================================options=====================================
bracketSameLine: true
parsers: ["flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<SomeHighlyConfiguredComponent
  onEnter={this.onEnter}
  onLeave={this.onLeave}
  onChange={this.onChange}
  initialValue={this.state.initialValue}
  ignoreStuff={true}
>
  <div>and the children go here</div>
  <div>and here too</div>
</SomeHighlyConfiguredComponent>

=====================================output=====================================
<SomeHighlyConfiguredComponent
  onEnter={this.onEnter}
  onLeave={this.onLeave}
  onChange={this.onChange}
  initialValue={this.state.initialValue}
  ignoreStuff={true}>
  <div>and the children go here</div>
  <div>and here too</div>
</SomeHighlyConfiguredComponent>;

================================================================================
`;

exports[`single_prop_multiline_string.js - {"bracketSameLine":false} format 1`] = `
====================================options=====================================
bracketSameLine: false
parsers: ["flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<path d="M4.765 16.829l3.069-2.946 5.813 5.748
  11.33-11.232 3.006 3.18-14.36 14.080z" />;

<Component text="Text
  with
  newlines">Content</Component>;

=====================================output=====================================
<path
  d="M4.765 16.829l3.069-2.946 5.813 5.748
  11.33-11.232 3.006 3.18-14.36 14.080z"
/>;

<Component
  text="Text
  with
  newlines"
>
  Content
</Component>;

================================================================================
`;

exports[`single_prop_multiline_string.js - {"bracketSameLine":true} format 1`] = `
====================================options=====================================
bracketSameLine: true
parsers: ["flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<path d="M4.765 16.829l3.069-2.946 5.813 5.748
  11.33-11.232 3.006 3.18-14.36 14.080z" />;

<Component text="Text
  with
  newlines">Content</Component>;

=====================================output=====================================
<path
  d="M4.765 16.829l3.069-2.946 5.813 5.748
  11.33-11.232 3.006 3.18-14.36 14.080z"
/>;

<Component
  text="Text
  with
  newlines">
  Content
</Component>;

================================================================================
`;
